Release 24w46a (snapshot)