@@ -1,84 +1,79 @@
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import javax.annotation.Nullable;
 
-public class bwt extends bwz<cgx> {
-   private static final int c = 3;
-   private static final int d = 60;
-   private static final int e = 110;
-   private final bur<? extends cgx> f;
+public class bwt<E extends bvn> extends bwy<E> {
+   private static final int c = 100;
+   private static final int d = 120;
+   private static final int e = 5;
+   private static final int f = 4;
    private final float g;
-   private final int h;
-   private static final int i = 2;
-   private long j;
+   private final Function<bvn, axe<btb>> h;
 
-   public bwt(bur<? extends cgx> $$0) {
-      this($$0, 1.0F, 2);
+   public bwt(float $$0) {
+      this($$0, $$0x -> awq.F);
    }
 
-   public bwt(bur<? extends cgx> $$0, float $$1, int $$2) {
-      super(ImmutableMap.of(cek.h, cel.a, cek.r, cel.b, cek.m, cel.c, cek.n, cel.c, cek.Z, cel.b), 110);
-      this.f = $$0;
-      this.g = $$1;
-      this.h = $$2;
+   public bwt(float $$0, Function<bvn, axe<btb>> $$1) {
+      super(Map.of(cej.Z, cek.c, cej.x, cek.c), 100, 120);
+      this.g = $$0;
+      this.h = $$1;
    }
 
-   protected boolean a(arc $$0, cgx $$1) {
-      return $$1.gz() && this.c($$1).isPresent();
+   protected boolean a(arc $$0, E $$1) {
+      return $$1.ec().c(cej.x).map($$1x -> $$1x.a(this.h.apply($$1))).orElse(false) || $$1.ec().a(cej.Z);
    }
 
-   protected void a(arc $$0, cgx $$1, long $$2) {
-      cgx $$3 = this.c($$1).get();
-      $$1.ec().a(cek.r, $$3);
-      $$3.ec().a(cek.r, $$1);
-      bxb.a($$1, (bvg)$$3, this.g, this.h);
-      int $$4 = 60 + $$1.dZ().a(50);
-      this.j = $$2 + (long)$$4;
+   protected boolean a(arc $$0, E $$1, long $$2) {
+      return true;
    }
 
-   protected boolean b(arc $$0, cgx $$1, long $$2) {
-      if (!this.b($$1)) {
-         return false;
+   protected void b(arc $$0, E $$1, long $$2) {
+      $$1.ec().a(cej.Z, true);
+      $$1.ec().b(cej.m);
+   }
+
+   protected void c(arc $$0, E $$1, long $$2) {
+      bwh<?> $$3 = $$1.ec();
+      $$3.b(cej.Z);
+   }
+
+   protected void d(arc $$0, E $$1, long $$2) {
+      if ($$1.L().k()) {
+         fay $$3 = this.a($$1, $$0);
+         if ($$3 != null) {
+            $$1.ec().a(cej.m, new cem($$3, this.g, 0));
+         }
+      }
+   }
+
+   @Nullable
+   private fay a(E $$0, arc $$1) {
+      if ($$0.bY()) {
+         Optional<fay> $$2 = this.a((dfl)$$1, $$0).map(fay::c);
+         if ($$2.isPresent()) {
+            return $$2.get();
+         }
+      }
+
+      return cgd.a($$0, 5, 4);
+   }
+
+   private Optional<ji> a(dfl $$0, buj $$1) {
+      ji $$2 = $$1.dw();
+      if (!$$0.a_($$2).g($$0, $$2).c()) {
+         return Optional.empty();
       } else {
-         cgx $$3 = this.a($$1);
-         return $$3.bL() && $$1.a($$3) && bxb.a($$1.ec(), $$3) && $$2 <= this.j && !$$1.gm() && !$$3.gm();
-      }
-   }
-
-   protected void c(arc $$0, cgx $$1, long $$2) {
-      cgx $$3 = this.a($$1);
-      bxb.a($$1, (bvg)$$3, this.g, this.h);
-      if ($$1.a($$3, 3.0)) {
-         if ($$2 >= this.j) {
-            $$1.a($$0, $$3);
-            $$1.ec().b(cek.r);
-            $$3.ec().b(cek.r);
-         }
-      }
-   }
-
-   protected void d(arc $$0, cgx $$1, long $$2) {
-      $$1.ec().b(cek.r);
-      $$1.ec().b(cek.m);
-      $$1.ec().b(cek.n);
-      this.j = 0L;
-   }
-
-   private cgx a(cgx $$0) {
-      return (cgx)$$0.ec().c(cek.r).get();
-   }
-
-   private boolean b(cgx $$0) {
-      bwi<?> $$1 = $$0.ec();
-      return $$1.a(cek.r) && $$1.c(cek.r).get().aq() == this.f;
-   }
-
-   private Optional<? extends cgx> c(cgx $$0) {
-      return $$0.ec().c(cek.h).get().a($$1 -> {
-         if ($$1.aq() == this.f && $$1 instanceof cgx $$2 && $$0.a($$2) && !$$2.gm()) {
-            return true;
+         Predicate<ji> $$3;
+         if (ayy.f($$1.dr()) == 2) {
+            $$3 = $$1x -> ji.a($$1x).allMatch($$1xx -> $$0.b_($$1xx).a(awu.a));
+         } else {
+            $$3 = $$1x -> $$0.b_($$1x).a(awu.a);
          }
 
-         return false;
-      }).map(cgx.class::cast);
+         return ji.a($$2, 5, 1, $$3);
+      }
    }
 }
